contrib/dex/ingress/dex.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex-ingress
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  tls:
    - secretName: dex-tls-secret
      hosts:
        - dex.example.com
  rules:
    - host: dex.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: dex
            servicePort: 5556
